--- a/src/components/Presentation/_btnPresentation.scss
+++ b/src/components/Presentation/_btnPresentation.scss
@@ -6,7 +6,7 @@
         z-index: 2;
         top: 0;
         left: calc(-140% - 100px);
-        border-bottom: 100px solid #286cff;
+        border-bottom: 100px solid $white;
         border-right: 100px solid transparent;
         transition: .4s ease-in-out all;
     }
@@ -17,7 +17,7 @@
 
     &__arrowIcon{
         font-size: 30px;
-        color: $main-color-txt;
+        color: $white;
         display: inline-flex;
         justify-content: center;
         align-self: center;
