--- a/src/components/Username/_username.scss
+++ b/src/components/Username/_username.scss
@@ -23,5 +23,5 @@
     color: white;
     font-size: 18px;
     border-radius: 5px;
-    background-color: $main-btn-hover;
+    background-color: $blue;
 }
