--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,7 @@
 $main-btn-color: #1d1c17;
-$main-btn-hover: #0171f5;
+$blue: #0171f5;
 $main-color-txt: #97f4ab;
-$main-color-letter: #e85cca;
+$pink: #e85cca;
+$black: #0e100f;
+$white: #fefce1;
+$transparent-white: #fefce1c5;
