--- a/src/components/Icon/_icon.scss
+++ b/src/components/Icon/_icon.scss
@@ -1,15 +1,15 @@
 .icon{
     text-transform: uppercase;
-    font-size: 100px;
+    font-size: 88px;
     font-weight: 900;
-    margin-top: 30px;
-    color: $main-color-letter;
+    margin-top: 5px;
+    color: $pink;
     transform: rotate(-10deg);
 
     filter: drop-shadow(-4px 4px 0px #97f4ab);
     transition: all ease-in-out 0.3s;
 
     &:hover{
-        font-size: 110px;
+        font-size: 98px;
     }
 }
