--- a/src/components/Layouts/_mainLayout.scss
+++ b/src/components/Layouts/_mainLayout.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $main-btn-color;
+    background-color: $black;
     background-size: cover;
     overflow: hidden;
 
@@ -21,14 +21,14 @@
     min-height: 100vh;
     transition: box-shadow ease-in-out .2s, all ease-in-out .3s;
     
-    background-image: linear-gradient(
+    /*     background-image: linear-gradient(
         to bottom,
         rgba(64, 0, 87, 0.612),
         rgba(18, 18, 18, 0.726))
         ,url('../../../images/cielo-montaña-fondo.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
 
     &:hover{
         box-shadow: -2px 2px 59px -21px rgba(0,0,0,0.58) inset;
