--- a/src/components/PageA/_pageA.scss
+++ b/src/components/PageA/_pageA.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    margin-top: 50px;
 
     .containerTitles{
         margin: 3em 6em;
@@ -18,7 +19,7 @@
         &__titleA, &__titleB, &__titleC, &__titleD, h1{
             text-transform: uppercase;
             font-size: 80px;
-            color: $main-color-txt;
+            color: $white;
             line-height: 1.5;
             letter-spacing: 0.15em;
             font-weight: 800;
@@ -31,34 +32,7 @@
         .containerTitles__titleD{
             font-size: 110px;
             font-weight: 900;
-            filter: drop-shadow(-7px 3px 0px $main-color-letter);
-        }
-    }
-
-    .btnWhoIAm{
-        position: absolute;
-        top: 85%;
-        left: 45%;
-        background-color: $main-color-letter;
-        width: 90px;
-        height: 90px;
-        transition: all, ease-in-out, .3s;
-
-        .arrowIcon{
-            font-size: 80px;
-            transition: all, ease-in-out, .3s;
-        }
-
-        &:hover{
-            width: 98px;
-            height: 98px;
-            cursor: pointer;
-            filter: drop-shadow(-3px 3px 0px $main-color-txt);
-            .arrowIcon{
-                font-size: 88px;
-                // color: $main-btn-hover;
-                filter: drop-shadow(-3px 3px 0px $main-btn-hover);
-            }
+            filter: drop-shadow(-7px 3px 0px $transparent-white);
         }
     }
 }
