--- a/src/components/Presentation/_titlePresentation.scss
+++ b/src/components/Presentation/_titlePresentation.scss
@@ -12,7 +12,7 @@
     font-size: 70px;
     font-family: 'Hanken Grotesk', sans-serif;
     font-weight: 900;
-    color: white;
+    color: $white;
     transition: .3s ease-in-out all;
 }
 
